# nl-tools

./: .env  Pipfile  README.md  copy_files_to_devices.py  lsl_remote_control.bat  lsl_run.bat  nl_remote_tools.py  nl_tools_update.bat  pyproject.toml  update_all_devices.py
conf/: LabRecorder.cfg
ssh/: authorized_keys  config
